force-app/main/default/objects/Rental__c/Rental__c.object-meta.xml
<CustomObject>
    <label>Rental</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Rental Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rentals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>