force-app/main/default/objects/Rental__c/fields/Date_Rented__c.field-meta.xml
<CustomField>
    <fullName>Date_Rented__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Rented</label>
    <type>Date</type>
</CustomField>