force-app/main/default/objects/Rental__c/fields/Returned__c.field-meta.xml
<CustomField>
    <fullName>Returned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Returned?</label>
    <type>Checkbox</type>
</CustomField>