force-app/main/default/objects/Rental__c/fields/Title_Name__c.field-meta.xml
<CustomField>
    <fullName>Title_Name__c</fullName>
    <formula>Stock__r.Title_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title Name</label>
    <type>Text</type>
</CustomField>